--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,7 @@ android {
         versionName "1.0"
     }
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
+        dcvsconnectwidget {
         }
     }
 }
