created radio app branch
for work on NAC radio app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
-        >
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <receiver android:name=".DCVSConnectWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -23,7 +22,8 @@
         <activity android:name=".Dcvsfun" />
         <activity android:name=".Dcvshelp" />
         <activity android:name=".Dcvsgames" />
-        <activity android:name=".DcvsInternet"></activity>
+        <activity android:name=".DcvsInternet" />
+        <activity android:name=".dcvsRadio"></activity>
     </application>
 
 </manifest>
