--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'de.mrmaffen:vlc-android-sdk:1.9.0'
+    compile 'com.android.support:design:23.3.0'
 }
