--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,17 @@ android {
     }
     buildTypes {
         //noinspection GroovyMissingReturnStatement
-        dcvsconnectwidget {
-
+        dcvswidget {
+            debuggable false
+            jniDebuggable false
+            signingConfig signingConfigs.config
+            renderscriptDebuggable false
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'de.mrmaffen:vlc-android-sdk:1.9.0'
